--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -29,6 +29,10 @@
   color: var(--primary-color);
 }
 
+.typing-animation .icon {
+  color: var(--primary-color);
+}
+
 // Keyframes for the typing animation
 @keyframes typing {
   from {
